--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@
     background: #7d97f4;
 }
 
+.blog .card .box-title{
+    height: 60px;
+}
+
+
 @media (max-width:767px) {
     .home h1 {
         font-size: 28px;
