--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
-    font-family: 'Montserrat',
-        sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .row {
@@ -12,6 +11,87 @@
 
 .nav-link {
     font-weight: 600;
+}
+#nav-icon {
+    width: 40px;
+    height: 20px;
+    position: fixed;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    right: 40px;
+    top: 30px;
+    z-index: 1060;
+}
+
+#nav-icon span {
+    display: block;
+    position: absolute;
+    height: 5px;
+    width: 100%;
+    background: #4042e2;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+#nav-icon span:nth-child(1) {
+    background: #4042e2;
+}
+
+#nav-icon span:nth-child(1) {
+    top: 0px;
+}
+
+#nav-icon span:nth-child(2) {
+    top: 10px;
+}
+
+#nav-icon span:nth-child(3) {
+    top: 20px;
+}
+
+#nav-icon.open {
+    background: transparent;
+}
+
+#nav-icon.open span:nth-child(1) {
+    top: 18px;
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+
+#nav-icon.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+}
+
+#nav-icon.open span:nth-child(3) {
+    top: 18px;
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+.navbar button:focus{
+    outline: 0;
+    box-shadow: none;
 }
 
 .home {
@@ -38,22 +118,35 @@
     background: #7d97f4;
 }
 
-.waves{
+.waves {
     position: absolute;
     bottom: -60px;
 }
 
-.blog .card .box-title{
+.blog .card .box-title {
     height: 60px;
 }
+.blog .col-md-6 {
+    margin: 20px 0;
+}
 
-
-@media (max-width:767px) {
-    .home h1 {
-        font-size: 28px;
-    }
-
+@media (max-width: 991px) {
     .home .btn {
         width: 140px;
+    }
+}
+
+@media (max-width: 767px) {
+    .home {
+        overflow-y: visible;
+    }
+    .home .buttons {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .home h1 {
+        font-size: 28px;
     }
 }
